Fix responsiveness on small and medium phones

--- a/src/pages/aboutpage/AboutPage.css
+++ b/src/pages/aboutpage/AboutPage.css
@@ -154,11 +154,49 @@
   }
 }
 
+@media (max-width: 376px) {
+  .about-box {
+    width: 250px;
+    height: 580px;
+  }
+
+  #about-section .matters-text {
+    font-size: 1.9rem;
+  }
+
+  #about-section p {
+    width: 320px;
+  }
+}
+
+@media (max-width: 320px) {
+  .about-box {
+    width: 220px;
+    height: 620px;
+  }
+
+  #about-section .matters-text {
+    font-size: 1.7rem;
+  }
+
+  #about-section p {
+    width: 270px;
+  }
+}
+
 /* Tablets */
 @media (min-width: 768px) and (max-width: 992px){
   .about-box {
     width: 290px;
     height: 450px;
+  }
+
+  #about-section > h1 {
+    font-size: 2.8rem;
+  }
+
+  #about-section .matters-text {
+    font-size: 2.4rem;
   }
 
   .about-box-text h3 {
