--- a/src/pages/homepage/styles/EventSection.css
+++ b/src/pages/homepage/styles/EventSection.css
@@ -170,6 +170,19 @@
     z-index: 0;
   }
 
+  .event-boxes h1 {
+    font-size: 1.5rem;
+  }
+
+  .event-boxes p {
+    font-size: 1rem;
+  }
+
+  .event-boxes .event-description {
+    font-size: 0.9rem;
+    width: 280px;
+  }
+
   .event-boxes h1,
   .event-boxes p,
   .event-boxes button {
@@ -191,9 +204,46 @@
     width: 100%;
     height: 400px;
   }
+}
 
-  #events > h1 {
-    font-size: 2.5rem;
+@media (max-width: 320px) {
+  .event-boxes h1 {
+    font-size: 1.3rem;
+  }
+
+  .event-boxes p {
+    font-size: 0.8rem;
+  }
+
+  .event-boxes .event-description {
+    font-size: 0.8rem;
+    width: 240px;
+  }
+
+  .event-boxes button {
+    font-size: 0.8rem;
+  }
+
+  .event-boxes h1,
+  .event-boxes p,
+  .event-boxes button {
+    position: relative;
+    z-index: 1;
+  }
+
+  .event-boxes button {
+    margin-bottom: 50px;
+  }
+
+  .event-box-section {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .event-boxes {
+    width: 100%;
+    height: 400px;
   }
 }
 
